Android tests refactoring